Bug 107596 - Fix assertions in make8BitFrom16BitSource() with threaded parser
Summary: Fix assertions in make8BitFrom16BitSource() with threaded parser
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tony Gentilcore
URL:
Keywords:
Depends on:
Blocks: 106127
  Show dependency treegraph
 
Reported: 2013-01-22 15:36 PST by Tony Gentilcore
Modified: 2013-01-22 16:24 PST (History)
2 users (show)

See Also:


Attachments
Patch (3.92 KB, patch)
2013-01-22 15:38 PST, Tony Gentilcore
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tony Gentilcore 2013-01-22 15:36:53 PST
Fix assertions in make8BitFrom16BitSource() with threaded parser
Comment 1 Tony Gentilcore 2013-01-22 15:38:06 PST
Created attachment 184062 [details]
Patch
Comment 2 Adam Barth 2013-01-22 16:01:17 PST
Comment on attachment 184062 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=184062&action=review

> Source/WebCore/html/parser/HTMLToken.h:245
>              m_externalCharacters = token.data().characters();
>              m_externalCharactersLength = token.data().length();
> +            m_isAll8BitData = token.isAll8BitData();

This change is fine, but I think we'll need to rethink this "external characters" design as part of this work.
Comment 3 WebKit Review Bot 2013-01-22 16:08:04 PST
Comment on attachment 184062 [details]
Patch

Clearing flags on attachment: 184062

Committed r140485: <http://trac.webkit.org/changeset/140485>
Comment 4 WebKit Review Bot 2013-01-22 16:08:07 PST
All reviewed patches have been landed.  Closing bug.
Comment 5 Eric Seidel (no email) 2013-01-22 16:24:12 PST
Comment on attachment 184062 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=184062&action=review

>> Source/WebCore/html/parser/HTMLToken.h:245
>> +            m_isAll8BitData = token.isAll8BitData();
> 
> This change is fine, but I think we'll need to rethink this "external characters" design as part of this work.

Agreed.