Fix assertions in make8BitFrom16BitSource() with threaded parser https://bugs.webkit.org/show_bug.cgi?id=107596

Reviewed by Adam Barth.

This fixes an assertion in several fast/parser tests. We need to keep track of whether the data is all 8bit.
Luckily this doesn't cost us any size on CompactHTMLToken because the bitfields are collapsed (verified by COMPILE_ASSERT).

No new tests because covered by existing fast/parser tests.

* html/parser/CompactHTMLToken.cpp:
(WebCore::CompactHTMLToken::CompactHTMLToken):
* html/parser/CompactHTMLToken.h:
(WebCore::CompactHTMLToken::isAll8BitData):
(CompactHTMLToken):
* html/parser/HTMLToken.h:
(WebCore::AtomicHTMLToken::AtomicHTMLToken):


Canonical link: https://commits.webkit.org/125830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140485 268f45cc-cd09-0410-ab3c-d52691b4dbfc